# PropertyAdvisor

./: .env.example  .gitignore  README.md  package.json  psycopg.py  pyproject.toml
db/: README.md  schema_v1.sql
db/scripts/: apply_schema.sh  check_database_env.sh
docs/: PRD_v1.md  architecture_v1.md  development_plan_v1.md  mvp_scope.md  notification-artifacts.md  phase1_real_data_readiness.md  phase1_real_data_tasks.md  phase1_sample_payload.json  phase1_source_contract.md  phase2_advisory_tasks.md  phase3_product_tasks.md  phase3_round3_orchestration_review.md  phase3_round4_watchlist_action_hub.md  phase3_round5_alert_event_visibility.md  phase3_round6_handoff_quality.md  phase3_round7_evidence_clarity.md  phase_plan_v2.md
scripts/: README.md  bootstrap_backend.sh  bootstrap_web.sh  replay_notifications_to_openclaw.py  start_api.sh  start_web.sh
src/property_advisor/: __init__.py  advisory.py  alerts.py  comparables.py  ingest.py  market_metrics.py  normalize.py
src/psycopg/: __init__.py
src/shared_notifications/: __init__.py  artifact_consumer.py  cli.py  dev_orchestrator.py  hooks.py  openclaw_bridge.py  (+4 more)
tests/: test_api_smoke.py  test_ingest.py  test_market_metrics_phase1_round4.py  test_notification_artifact_consumer.py  test_notification_artifact_schema.py  test_notification_artifact_writer.py  test_notification_hooks.py  test_notification_relay.py  test_openclaw_bridge.py  test_openclaw_bridge_cli.py  test_orchestration_review_service.py  test_phase1_ingest.py  test_repositories_services.py  test_smoke.py
web/: package-lock.json  package.json
(+43 files in other folders)
