[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "property-advisor"
version = "0.1.0"
description = "Backend/domain scaffold for the PropertyAdvisor MVP."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
